<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="btn_popular_movies">Popular Movies</string>
    <string name="btn_stock_hawk">Stock Hawk</string>
    <string name="btn_build_it_bigger">Build it Bigger</string>
    <string name="btn_make_your_app_material">Make your app material</string>
    <string name="btn_go_ubiquitous">Go ubiquitous</string>
    <string name="btn_capstone">Capstone</string>
    <string name="str_my_nanodegree_apps">My Nanodegree Apps</string>
</resources>
