<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nanodegree.android.project0.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_popular_movies"
        android:id="@+id/id_pMovies"
        android:layout_marginTop="44dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:onClick="showToast"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_stock_hawk"
        android:id="@+id/id_sHawk"
        android:layout_below="@+id/id_pMovies"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/id_pMovies"
        android:onClick="showToast"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_build_it_bigger"
        android:id="@+id/id_bBigger"
        android:layout_below="@+id/id_sHawk"
        android:layout_alignEnd="@+id/id_sHawk"
        android:layout_alignParentStart="true"
        android:onClick="showToast"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_make_your_app_material"
        android:id="@+id/id_mAppMaterial"
        android:layout_below="@+id/id_bBigger"
        android:layout_alignEnd="@+id/id_bBigger"
        android:layout_alignParentStart="true"
        android:onClick="showToast"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_go_ubiquitous"
        android:id="@+id/id_gUbiquitous"
        android:layout_below="@+id/id_mAppMaterial"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/id_mAppMaterial"
        android:onClick="showToast"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_capstone"
        android:id="@+id/id_capstone"
        android:layout_below="@+id/id_gUbiquitous"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/id_gUbiquitous"
        android:onClick="showToast"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/str_my_nanodegree_apps"
        android:id="@+id/textView"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/id_pMovies"
        android:layout_alignParentStart="true" />

</RelativeLayout>
